--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Studio di Psicologia - Supporto e benessere mentale">
-  <title>{{ title }} | Dott.ssa Psicologa</title>
+  <title>{{ title }} | Dott.ssa Psicologa Sara Martini</title>
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
   <header class="header">
     <div class="container">
       <div class="logo">
-        <h1><a href="/">Dott.ssa Psicologa</a></h1>
+        <h1><a href="/">Dott.ssa Psicologa Sara Martini</a></h1>
       </div>
       <nav class="nav">
         <a href="/" class="nav-link">Home</a>
